Ajustes na arquitetura